--- a/leonardo_accounts/templates/accounts/balance_check.html
+++ b/leonardo_accounts/templates/accounts/balance_check.html
@@ -1,23 +1,15 @@
-{% extends "layout.html" %}
+{% extends widget.get_base_template %}
 {% load url from future %}
 {% load currency_filters %}
 {% load i18n %}
+{% load applicationcontent_tags %}
 
+
+{% fragment request "_page_subtitle" %}
 {% block title %}
     {% trans 'Check my balance' %} | {{ block.super }}
 {% endblock %}
-
-{% block breadcrumbs %}
-    <ul class="breadcrumb">
-        <li>
-            <a href="{% url 'promotions:home' %}">{% trans 'Home' %}</a>
-            <span class="divider">/</span>
-        </li>
-        <li class="active">{% trans 'Accounts' %}</li>
-    </ul>
-{% endblock %}
-
-{% block headertext %}{% trans 'Check balance of giftcard' %}{% endblock %}
+{% endfragment %}
 
 {% block content %}
 
