more user account management

--- a/leonardo_accounts/templates/accounts/dashboard/partials/account_detail.html
+++ b/leonardo_accounts/templates/accounts/dashboard/partials/account_detail.html
@@ -67,7 +67,7 @@
         {% if account.product_range %}
             <tr>
                 <th>{% trans "Can be spent on products from range" %}</th>
-                <td><a href="{% url 'dashboard:range-update' account.product_range.id %}">{{ account.product_range }}</a></td>
+                <td>{{ account.product_range }}</td>
             </tr>
         {% endif %}
     </tbody>
