--- a/leonardo_accounts/templates/accounts/dashboard/account_thaw.html
+++ b/leonardo_accounts/templates/accounts/dashboard/account_thaw.html
@@ -1,5 +1,5 @@
 {% extends 'dashboard/layout.html' %}
-{% load url from future %}
+{% load leonardo_tags %}
 {% load currency_filters %}
 {% load i18n %}
 
@@ -10,11 +10,11 @@
 {% block breadcrumbs %}
 <ul class="breadcrumb">
     <li>
-		<a href="{% url 'dashboard:index' %}">{% trans "Dashboard" %}</a>
+		<a href="{% url 'dashboard:index' 'leonardo_store.apps.dashboard' %}">{% trans "Dashboard" %}</a>
         <span class="divider">/</span>
     </li>
     <li>
-		<a href="{% url 'dashboard:accounts-list' %}">{% trans "Accounts" %}</a>
+		<a href="{% url 'dashboard:accounts-list' 'leonardo_store.apps.dashboard' %}">{% trans "Accounts" %}</a>
         <span class="divider">/</span>
     </li>
 	<li class="active">{% trans "Thaw account" %} #{{ account.id }}</li>
