--- a/leonardo_accounts/templates/accounts/dashboard/account_form.html
+++ b/leonardo_accounts/templates/accounts/dashboard/account_form.html
@@ -1,5 +1,5 @@
 {% extends 'dashboard/layout.html' %}
-{% load url from future %}
+{% load leonardo_tags %}
 {% load currency_filters %}
 {% load i18n %}
 
@@ -10,16 +10,16 @@
 {% block breadcrumbs %}
     <ul class="breadcrumb">
         <li>
-            <a href="{% url 'dashboard:index' %}">{% trans "Dashboard" %}</a>
+            <a href="{% url 'dashboard:index' 'leonardo_store.apps.dashboard'  %}">{% trans "Dashboard" %}</a>
             <span class="divider">/</span>
         </li>
         <li>
-            <a href="{% url 'dashboard:accounts-list' %}">{% trans "Accounts" %}</a>
+            <a href="{% url 'dashboard:accounts-list' 'leonardo_store.apps.dashboard'  %}">{% trans "Accounts" %}</a>
             <span class="divider">/</span>
         </li>
         {% if account %}
             <li>
-                <a href="{% url 'dashboard:accounts-detail' account.id %}">{{ account }}</a>
+                <a href="{% url 'dashboard:accounts-detail' 'leonardo_store.apps.dashboard'  account.id %}">{{ account }}</a>
                 <span class="divider">/</span>
             </li>
             <li class="active">{% trans "Update" %}</li>
@@ -69,7 +69,7 @@
         <div class="form-actions">
             <button class="btn btn-primary btn-large" type="submit">{% trans "Save" %}</button>
             {% trans "or" %}
-            <a href="{% url 'dashboard:accounts-list' %}">{% trans "cancel" %}</a>
+            <a href="{% url 'dashboard:accounts-list' 'leonardo_store.apps.dashboard'  %}">{% trans "cancel" %}</a>
         </div>
     </form>
 
