--- a/leonardo_accounts/templates/accounts/dashboard/account_withdraw.html
+++ b/leonardo_accounts/templates/accounts/dashboard/account_withdraw.html
@@ -1,5 +1,7 @@
 {% extends 'dashboard/layout.html' %}
 {% load currency_filters %}
+{% load leonardo_tags %}
+
 {% load i18n %}
 
 {% block title %}
@@ -9,15 +11,15 @@
 {% block breadcrumbs %}
     <ul class="breadcrumb">
         <li>
-            <a href="{% url 'dashboard:index' %}">{% trans "Dashboard" %}</a>
+            <a href="{% url 'dashboard:index' 'leonardo_store.apps.dashboard' %}">{% trans "Dashboard" %}</a>
             <span class="divider">/</span>
         </li>
         <li>
-            <a href="{% url 'dashboard:accounts-list' %}">{% trans "Accounts" %}</a>
+            <a href="{% url 'dashboard:accounts-list' 'leonardo_store.apps.dashboard' %}">{% trans "Accounts" %}</a>
             <span class="divider">/</span>
         </li>
         <li>
-            <a href="{% url 'dashboard:accounts-detail' account.id %}">{{ account }}</a>
+            <a href="{% url 'dashboard:accounts-detail' 'leonardo_store.apps.dashboard' account.id %}">{{ account }}</a>
             <span class="divider">/</span>
         </li>
         <li class="active">{% trans "Withdraw" %}</li>
@@ -42,7 +44,7 @@
             {% endif %}
             {% include 'partials/form_field.html' with field=form.amount %}
             <button type="submit" class="btn btn-large btn-success">{% trans "Withdraw" %}</button>
-            or <a href="{% url 'dashboard:accounts-detail' account.id %}">{% trans "cancel" %}</a>.
+            or <a href="{% url 'dashboard:accounts-detail' 'leonardo_store.apps.dashboard' account.id %}">{% trans "cancel" %}</a>.
         </form>
     {% else %}
         <p>{% trans "This account's funds cannot be withdrawn." %}</p>
